@@ -33,7 +33,7 @@ dependencies {
     }
     implementation 'org.apache.logging.log4j:log4j-core:2.25.2'
     implementation 'com.oracle.database.jdbc:ojdbc11:23.26.0.0.0'
-    implementation 'org.springframework:spring-jdbc:6.2.13'
+    implementation 'org.springframework:spring-jdbc:7.0.1'
 
     /*
     implementation 'org.incenp:sssom-core:0.7.9'
